[package]
name = "Laplace"
version = "0.1.0"
edition = "2021"
authors = [
    "GamingLiamStudios <58615717+GamingLiamStudios@users.noreply.github.com>",
]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

wgpu = { version = "24.0", features = ["serde"] }
winit = { version = "0.30", features = ["serde"] }
pollster = "0.4"

egui = "0.30"

# The biggest fucking library known to man
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "6.0"

[profile.dev.package."*"]
opt-level = 2
debug = 1

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
perf = "deny"
all = "deny"
